<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.drcaolangm.testapplication.MapScreen"
    >
    <Button
        android:id="@+id/tint"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="10"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/titlebar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <RelativeLayout
            android:id="@+id/backBtn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:paddingLeft="15dp"
            android:paddingRight="15dp">

            <ImageView
                android:id="@+id/arrow"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:paddingTop="15dp"
                android:paddingBottom="15dp"
                android:src="@drawable/menu_arrow"/>
            <TextView
                android:layout_toRightOf="@+id/arrow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="13dp"
                android:layout_centerVertical="true"
                android:textSize="@dimen/mobileText"
                android:textColor="@color/white"
                android:text="@string/rsr_pechhulp"/>
        </RelativeLayout>


    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".07"
            android:background="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        >

        <fragment xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context="com.example.mapwithmarker.MapsMarkerActivity" />







        <LinearLayout
            android:visibility="visible"
            android:id="@+id/buttonArea"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="15dp"
            android:weightSum="1">
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight=".15"/>
            <LinearLayout
                android:background="@color/colorPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:orientation="vertical">

                <RelativeLayout
                    android:id="@+id/button"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                <ImageView
                    android:id="@+id/btnimg"
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:src="@drawable/main_btn_phone"
                    android:layout_alignParentLeft="true"
                    android:layout_toLeftOf="@+id/btntxt"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="15dp"/>
                <TextView
                    android:id="@+id/btntxt"
                    android:layout_centerHorizontal="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mobileText"
                    android:textColor="@color/white"
                    android:text="@string/call"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    />
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="3dp"
                    android:background="@color/colorPrimaryDark"/>
            </LinearLayout>

        </LinearLayout>





    </RelativeLayout>

    </LinearLayout>

    <LinearLayout

        android:id="@+id/popUp"
        android:visibility="gone"
        android:elevation="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="35dp"
        android:weightSum="1">
        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".05"/>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".9"
            >
            <RelativeLayout
                android:id="@+id/cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary">
                <ImageView
                    android:id="@+id/cancelimg"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_marginRight="10dp"
                    android:layout_centerVertical="true"
                    android:src="@drawable/main_btn_close"/>
                <TextView
                    android:layout_toRightOf="@+id/cancelimg"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:textSize="@dimen/mobilePopUpText"
                    android:text="@string/cancel"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_below="@+id/cancel"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/green">

                <TextView
                    android:id="@+id/titletxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="@dimen/mobileText"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="30dp"
                    android:text="@string/popUpTitle"
                    android:textStyle="bold"
                    android:gravity="center_horizontal"
                    />
                <TextView
                    android:id="@+id/maintxt"
                    android:layout_below="@+id/titletxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_marginLeft="35dp"
                    android:layout_marginRight="35dp"
                    android:layout_marginBottom="15dp"
                    android:textSize="@dimen/mobilePopUpText"
                    android:text="@string/popUpText"/>

                <LinearLayout
                    android:layout_below="@+id/maintxt"
                    android:background="@color/colorPrimary"
                    android:layout_width="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"
                    android:layout_centerHorizontal="true"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:id="@+id/button2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <ImageView
                        android:id="@+id/btnimg2"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:src="@drawable/main_btn_phone"
                        android:layout_centerVertical="true"
                        android:layout_alignParentLeft="true"
                        android:layout_toLeftOf="@+id/btntxt2"
                        android:layout_marginLeft="15dp"/>
                    <TextView
                        android:id="@+id/btntxt2"
                        android:layout_centerHorizontal="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="@dimen/mobileText"
                        android:textColor="@color/white"
                        android:text="@string/confirmCall"
                        android:layout_marginTop="5dp"
                        android:layout_marginBottom="5dp"
                        />

                    </RelativeLayout>
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="3dp"
                        android:background="@color/colorPrimaryDark"/>
                </LinearLayout>

            </RelativeLayout>
        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/noConn"
        android:visibility="gone"
        android:elevation="20dp"
        android:background="@color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/mobilePopUpText"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/connectTitle"/>

        <TextView
            android:id="@+id/connTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/mobilePopUpText"
            android:text="@string/connectMessage"
            android:layout_marginBottom="20dp"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="right">
        <TextView
            android:id="@+id/cancelConn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/darkgreen"
            android:textSize="@dimen/mobilePopUpText"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"

            android:text="@string/cancelCAP"/>
        <TextView
            android:id="@+id/turnOn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/mobilePopUpText"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:text="@string/turnon"/>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>