<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.drcaolangm.testapplication.activities.HomeScreen"
    >
    <rl_popUpBtn
        android:id="@+id/btn_tint"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#88000000"/>

    <LinearLayout
        android:id="@+id/ll_popUp"
        android:visibility="gone"
        android:elevation="20dp"
        android:background="@color/white"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingLeft="20dp"
        android:paddingBottom="20dp"
        android:orientation="vertical"
        tools:targetApi="lollipop">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/mobilePopUpText"
            android:textStyle="bold"
            android:layout_marginBottom="20dp"
            android:text="@string/privacyTitle"/>

        <TextView
            android:id="@+id/et_privLinkTxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/mobilePopUpText"
            android:layout_marginBottom="20dp"
            />

        <TextView
            android:id="@+id/tv_accept"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/mobilePopUpText"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"
            android:layout_gravity="right"
            android:text="@string/privacyAccept"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <RelativeLayout
        android:id="@+id/rl_titlebar"
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_centerVertical="true"
            android:textSize="@dimen/mobileText"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:text="@string/homeTitle"
            tools:ignore="RelativeOverlap"
            android:layout_marginStart="13dp" />

        <ImageView
            android:id="@+id/iv_privInfo"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:src="@drawable/main_i"
            android:layout_alignParentEnd="true"
            android:paddingStart="20dp"
            android:paddingEnd="10dp"
            android:contentDescription="@string/todo" />

        <RelativeLayout
            android:visibility="gone"
            android:id="@+id/button3"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingLeft="20dp"
            android:paddingRight="10dp"
            android:src="@drawable/main_i"
            android:layout_alignParentEnd="true"
            android:paddingStart="20dp"
            android:paddingEnd="10dp" />
    </RelativeLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight=".07"
            android:background="@color/colorPrimaryDark"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="9"
        android:background="@drawable/main_bg">

     <LinearLayout
         android:id="@+id/ll_buttonArea"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_marginBottom="15dp"
         android:weightSum="1"
         android:baselineAligned="false"
         tools:ignore="UselessParent">
         <RelativeLayout
             android:id="@+id/indent"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".15"/>
         <LinearLayout
             android:id="@+id/ll_buttonBlock"
             android:background="@color/colorPrimary"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="0.7"
             android:orientation="vertical">
            <RelativeLayout
                android:id="@+id/rl_mapbutton"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
             <ImageView
                 android:id="@+id/iv_btnimg"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
                 android:src="@drawable/main_btn_warning"
                 android:layout_alignParentLeft="true"
                 android:layout_toLeftOf="@+id/tv_btntxt"
                 android:layout_centerVertical="true"
                 android:layout_marginLeft="15dp"
                 android:contentDescription="@string/todo"
                 android:layout_alignParentStart="true"
                 android:layout_toStartOf="@+id/tv_btntxt"
                 android:layout_marginStart="15dp" />
             <TextView
                 android:id="@+id/tv_btntxt"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:textSize="@dimen/mobileText"
                 android:layout_centerHorizontal="true"
                 android:gravity="center_horizontal"
                 android:textColor="@color/white"
                 android:text="@string/rsr_pechhulp"
                 android:maxLines="2"
                 android:layout_marginTop="5dp"
                 android:layout_marginBottom="5dp"
                 />
            </RelativeLayout>
             <RelativeLayout
                 android:layout_width="match_parent"
                 android:layout_height="3dp"
                 android:background="@color/colorPrimaryDark"/>
         </LinearLayout>


     </LinearLayout>


    </RelativeLayout>

    </LinearLayout>
</RelativeLayout>